<resources>
    <string name="app_name">أين دوائي</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="long_text_part1">
         تطبيق مبتكر يُسهّل على المرضى الحصول على أدويتهم بشكل أسرع وأكثر راحة. يتيح للمستخدمين البحث عن الأدوية المتوفرة، ومعرفة أماكن تواجدها في الصيدليات القريبة، بالإضافة إلى طلبها مباشرة عبر التطبيق لتوصيلها إلى باب المنزل.

    </string>
    <string name="long_text_part2">
        يستهدف التطبيق المرضى الذين يحتاجون إلى متابعة دورية للعلاج، أو من يعانون من صعوبة في إيجاد بعض الأدوية، ويوفر لهم تجربة آمنة وسهلة لإدارة احتياجاتهم العلاجية.
    </string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_app_id">1314456363688103</string>
    <string name="fb_login_protocol_scheme">fb1314456363688103</string>
    <string name="facebook_client_token">7a6f6a6d9be1abd8c1c0c171d806a378</string>
    <string name="example_gmail_com_hint">example@gmail.com</string>
    <string name="btn_save_edits">حفظ التعديل</string>
    <string name="example">example</string>
    <string name="phone_number">0592754492</string>
    <string name="edit_profile">تعديل المعلومات الشخصية</string>
    <string name="ensure_location">تأكيد الموقع</string>
    <string name="continue_text">استمر</string>
    <string name="add_new_location">إضافة موقع جديد</string>
    <string name="full_address">العنوان</string>
    <string name="add_prescription">إرفاق الروشته</string>
    <string name="add_evaluation">ادخل تعليقك لتقييم الصيدلية</string>
    <string name="send">إرسال</string>
    <string name="commonQuestions">الأسئلة الشائعة</string>
    <string name="change_location">تعديل الموقع</string>
    <string name="allow_location">السماح بالوصول للموقع</string>
    <string name="location_description">موقعك بيساعدنا نوصل لك الخدمة بشكل أسرع وأسهل</string>
    <string name="choose_another_location">اختر موقع اخر</string>
    <string name="current_location">موقعي الحالي</string>
    <string name="reset_password">اعادة تعين كلمة المرور</string>
    <string name="reset_pass_description">أدخل كلمة المرور الجديدة حاول أن تكون غير معقدة لتستطيع التسجيل بعدها بسهولة ..</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="ensure_password">تأكيد كلمة المرور</string>
    <string name="ensure">تأكيد</string>
    <string name="verify_email">راجع بريدك الالكتروني</string>
    <string name="email_description">تم ارسال كود مكون من 4 ارقام الى البريد الالكتروني</string>
    <string name="code_finish">الكود ينتهي خلال :</string>
    <string name="time">03:45</string>
    <string name="not_sent_code">لم يصلني الكود الى البريد الالكتروني ،</string>
    <string name="resend">إعادة الارسال</string>
    <string name="forget_password">نسيت كلمة المرور</string>
    <string name="send_code">سنرسل لك كود تحقق يتكون من 4 أرقام ، قم بإدخال البريد الالكتروني حتى نرسل لك كود التحقق</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="userName">الاسم</string>
    <string name="phone_text">رقم الجوال</string>
    <string name="password">كلمة المرور</string>
    <string name="or">أو</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="have_account">هل لديك حساب بالفعل؟</string>
    <string name="login">تسجيل الدخول</string>
    <string name="remember_me">تذكرني</string>
    <string name="forget_password_lo">هل نسيت كلمة المرور؟</string>
    <string name="not_have_account">ليس لديك حساب؟</string>
    <string name="continue_add">متابعة</string>
    <string name="hello_user">مرحبا, غيداء</string>
    <string name="search_easily_for_medicine">ابحث عن دوائك بسهولة... واعرف أماكن توفره بالقرب منك فوراً!</string>
    <string name="join_as_pharmacy">انضم الينا كصيدلية</string>
    <string name="load_pre">تحميل وصفة الطبيب</string>
    <string name="near_pharmacy">الصيدليات القريبة من موقعك</string>
    <string name="medicine_always_use">الأدوية الأكثر استخداماً</string>
    <string name="search_medicine">ابحث عن دوائك</string>
    <string name="profile">الصفحة الشخصية</string>
    <string name="common_questions">الأسئلة الشائعة</string>
    <string name="settings">الاعدادات</string>
    <string name="app_info">عن التطبيق</string>
    <string name="app_rating">قيم التطبيق</string>
    <string name="myLocation">موقعي</string>
    <string name="favorite">المفضلة</string>
    <string name="delete_account">حذف الحساب</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="pharmacies">الصيدليات</string>
    <string name="medicines">الأدوية</string>
    <string name="rate_example">4.5</string>
    <string name="pharmacy_name">صيدلية الخنساء الطبية</string>
    <string name="date">3 مارس 2024</string>
    <string name="description">صيدلية منظمة، توفر خدمة جيدة وأسعار مناسبة، لكن تحتاج لتحسين سرعة الاستجابة.</string>
    <string name="resolve">اكتشف، تواصل، وأرفق روشتتك خلال ثوان 🧾ٍ</string>
    <string name="board">ابحث عن دوائك واطلبه من أقرب صيدلية بكل سهولة كل ذلك في تطبيق واحد بسيط 🩺</string>
    <string name="number">50</string>
    <string name="available_medicine">الأدوية المتوفرة</string>
    <string name="click_toRate">اضغط للتقيم</string>
    <string name="location_inMap">الموقع على الخريطة</string>
    <string name="rates">تقييمات</string>
    <string name="dead_line">8:00 ص_1:00 م</string>
    <string name="kilo">كيلو</string>
    <string name="price">50.00</string>
    <string name="dollar">₪</string>
    <string name="available_pharmacies">الصيدليات المتاحة</string>
    <string name="usage">الاستخدام</string>
    <string name="available">متاح في 18 صيدلية</string>
    <string name="description_medicine">مكمل غذائي لذيذ على شكل حلوى جيلاتينية، يدعم صحتك اليومية بطريقة ممتعة وسهلة! يساهم في نمو الخلايا وتجديد الجلد والحفاظ على صحةالجسد</string>
    <string name="category">فيتامين</string>
    <string name="haba">حبة</string>
    <string name="instructions">التعليمات</string>
    <string name="side_effects">الآثار الجانبية</string>
</resources>