<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_background"
    android:layoutDirection="rtl"
    tools:context=".LocationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="69dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:layout_width="335dp"
            android:layout_height="324dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/location_image"
            android:layout_marginBottom="61dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/allow_location"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/rubik"
            android:text="@string/location_description"
            android:textAlignment="center"
            android:textColor="#801C1A1A"
            android:textSize="16sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_currentLocation"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="49dp"
            android:background="@drawable/btn_background_profile"
            android:fontFamily="@font/rubik"
            android:text="@string/current_location"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_chooseLocation"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/choose_location_btn_background"
            android:fontFamily="@font/rubik"
            android:text="@string/choose_another_location"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>