<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_background"
    android:layoutDirection="rtl"
    tools:context=".VerifyTokenActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/arrow_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_image">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/verify_email"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik"
            android:text="@string/email_description"
            android:textColor="#801C1A1A"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="@string/example_gmail_com_hint"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/code_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="46dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="46dp"
            android:gravity="center">

            <EditText
                android:id="@+id/edt_code1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:autofillHints="creditCardNumber"
                android:background="@drawable/otp_box_background"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="18sp"
                tools:ignore="LabelFor" />
            <Space
                android:layout_width="8dp"
                android:layout_height="0dp"/>
            <EditText
                android:id="@+id/edt_code2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:autofillHints="creditCardNumber"
                android:background="@drawable/otp_box_background"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="18sp"
                tools:ignore="LabelFor" />
            <Space
                android:layout_width="8dp"
                android:layout_height="0dp"/>
            <EditText
                android:id="@+id/edt_code3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:autofillHints="creditCardNumber"
                android:background="@drawable/otp_box_background"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="18sp"
                tools:ignore="LabelFor" />
            <Space
                android:layout_width="8dp"
                android:layout_height="0dp"/>
            <EditText
                android:id="@+id/edt_code4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:autofillHints="creditCardNumber"
                android:background="@drawable/otp_box_background"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="18sp"
                tools:ignore="LabelFor" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background_profile"
            android:fontFamily="@font/rubik"
            android:text="@string/ensure"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="42.5dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="42.5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="@string/code_finish"
                android:textColor="#7F1C1A1A"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_count_down_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/rubik"
                android:text="@string/time"
                android:textColor="#E94141"
                android:textSize="14sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="@string/not_sent_code"
                android:textColor="#7F1C1A1A"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="@string/resend"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:progressTint="@color/primary_color"
            android:visibility="gone"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>