<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingPrescriptionActivity">

    <include
        android:id="@+id/header"
        layout="@layout/activity_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/backgroundCard"
        android:layout_width="0dp"
        android:layout_height="550dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="#78EEFCFC"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.25">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="260dp"
                android:background="@drawable/dashed_border"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/icon_add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables,UselessParent">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/paper_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/rubik"
                        android:text="@string/add_prescription"
                        android:textColor="#000"
                        android:textSize="16sp" />
                </LinearLayout>
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/btn_background_profile"
                android:backgroundTint="@color/primary"
                android:fontFamily="@font/rubik"
                android:text="@string/continue_add"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </LinearLayout>


        <!-- RecyclerView داخل الكارد الأخضر -->


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>